@@ -1,3 +1,5 @@
+[B]1.5.0[/B]
+- convert to module for archivCZSK >=1.7.0
 [B]1.4.0[/B]
 - make addon python 3.x compatible
 [B]1.3.12[/B]
